--- a/menu.css
+++ b/menu.css
@@ -1,16 +1,16 @@
 @font-face {
-    font-family: "KG Broken Vessels Sketch";
-    src: url(KGBrokenVesselsSketch.ttf) format("opentype");
+    font-family: "Chainwhacks";
+    src: url(Chainwhacks-vm72E.ttf) format("opentype");
  }
  
  @font-face {
-    font-family: "KG Broken Vessels Sketch";
-    src: url(KGBrokenVesselsSketch.ttf) format("opentype");
+    font-family: "Dragon Hunter";
+    src: url(Chainwhacks-vm72E.ttf) format("opentype");
     font-weight: bold;
  }
  
 body {
-    font-family: "KG Broken Vessels Sketch", Verdana, Tahoma;
+    font-family: "Chainwhacks", Verdana, Tahoma;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,18 +27,23 @@ body {
 }
 
 * {
-    font-family: "KG Broken Vessels Sketch", Verdana, Tahoma;
+    font-family: "Chainwhacks", Verdana, Tahoma;
 }
 
 h1 {
     margin-bottom: 10px;
     color: white;
-    font-family: "KG Broken Vessels Sketch", Verdana, Tahoma;
+    font-family: "Chainwhacks", Verdana, Tahoma;
+    letter-spacing: 3px;
 }
 h2 {
     color: black;
 }
 
+h4 {
+    letter-spacing: 2px;
+    font-size: 1.3em;
+}
 #game-container {
     display: none;
     margin-top: 20px;
@@ -70,4 +75,61 @@ button {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+}
+
+*
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body
+{
+  min-height: 100vh;
+  background: #00001b;
+}
+.container
+{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+.bubbles
+{
+  position: relative;
+  display: flex;
+}
+.bubbles span
+{
+  position: relative;
+  width: 30px;
+  height: 30px;
+  background: #4fc3dc;
+  margin: 0 4px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 10px #4fc3dc44,
+  0 0 50px #4fc3dc,
+  0 0 100px #4fc3dc;
+  animation: animate 10s linear infinite;
+  animation-duration: calc(125s / var(--i));
+}
+
+.bubbles span:nth-child(even)
+{
+  background: #ff2d75;
+  box-shadow: 0 0 0 10px #ff2d7544,
+  0 0 50px #ff2d75,
+  0 0 100px #ff2d75;
+}
+@keyframes animate
+{
+  0%
+  {
+     transform: translateY(100vh) scale(0);
+  }
+  100%
+  {
+     transform: translateY(-10vh) scale(1);
+  }
 }
