--- a/menu.css
+++ b/menu.css
@@ -99,16 +99,17 @@ body
 {
   position: relative;
   display: flex;
+  z-index: -1000;
 }
 .bubbles span
 {
   position: relative;
-  width: 30px;
-  height: 30px;
+  width: 15px;
+  height: 20px;
   background: #4fc3dc;
-  margin: 0 4px;
+  margin: 0 2px;
   border-radius: 50%;
-  box-shadow: 0 0 0 10px #4fc3dc44,
+  box-shadow: 0 0 0 7px #4fc3dc44,
   0 0 50px #4fc3dc,
   0 0 100px #4fc3dc;
   animation: animate 10s linear infinite;
@@ -118,7 +119,7 @@ body
 .bubbles span:nth-child(even)
 {
   background: #ff2d75;
-  box-shadow: 0 0 0 10px #ff2d7544,
+  box-shadow: 0 0 0 7px #ff2d7544,
   0 0 50px #ff2d75,
   0 0 100px #ff2d75;
 }
