--- a/styles.css
+++ b/styles.css
@@ -1,134 +1,130 @@
+/* Font Faces */
 @font-face {
-    font-family: "Chainwhacks";
-    src: url(Chainwhacks-vm72E.ttf) format("opentype");
- }
- 
- @font-face {
-    font-family: "Chainwhacks";
-    src: url(Chainwhacks-vm72E.ttf) format("opentype");
-    font-weight: bold;
- }
-
- * {
-    font-family: "Chainwhacks", Verdana, Tahoma;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-body {
-    font-family: "Chainwhacks", Verdana, Tahoma;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    margin: auto;
-    color: white;
-    font-size: 0.7em;
-    justify-content: center;
-    min-height: 100vh;
-    background: #00001b;
-    position: fixed;
-    left: 0;
-    right: 0;
-    overflow: hidden;
-    scale: 2;
-    margin-top: -100px;
+  font-family: "Chainwhacks";
+  src: url(Chainwhacks-vm72E.ttf) format("opentype");
 }
 
+@font-face {
+  font-family: "Chainwhacks";
+  src: url(Chainwhacks-vm72E.ttf) format("opentype");
+  font-weight: bold;
+}
+
+/* Reset and Default Styles */
+* {
+  font-family: "Chainwhacks", Verdana, Tahoma;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Body Styles */
+body {
+  font-family: "Chainwhacks", Verdana, Tahoma;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: auto;
+  color: white;
+  font-size: 0.7em;
+  justify-content: center;
+  background: #00001b;
+  position: fixed;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  scale: 2;
+  min-height: 950px;
+  min-width: 520px;
+}
+
+/* Game Styles */
 .winning-cell {
   background-color: #64d5ee;
   font-weight: bold;
   color: black;
 }
 
-
 h1 {
-    margin-bottom: 10px;
-    color: white;
+  margin-bottom: 10px;
+  color: white;
 }
 
 table {
-    border-collapse: collapse;
-    margin-bottom: 20px;
+  border-collapse: collapse;
+  margin-bottom: 20px;
 }
 
 td {
-    width: 40px;
-    height: 40px;
-    border: 1px solid #ddd;
-    text-align: center;
-    font-size: 18px;
-    cursor: pointer;
-    color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ddd;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+  color: white;
 }
 
 td:hover {
-    background-color: #f2f2f27c;
+  background-color: #f2f2f27c;
 }
 
 #scores {
-    text-align: center;
-    color: white;
+  text-align: center;
+  color: white;
 }
 
 #turnLabel {
-    font-size: 20px;
-    margin-bottom: 10px;
-    padding: 5px;
-    color: white;
+  font-size: 20px;
+  margin-bottom: 10px;
+  padding: 5px;
+  color: white;
 }
 
 button {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-.container
-{
+/* Animation Styles */
+.container {
   position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  min-width: 100%;
 }
-.bubbles
-{
+
+.bubbles {
   position: relative;
   display: flex;
-  z-index: -1000;
 }
-.bubbles span
-{
+
+.bubbles span {
   position: relative;
-  width: 15px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   background: #4fc3dc;
-  margin: 0 2px;
+  margin: 0 4px;
   border-radius: 50%;
-  box-shadow: 0 0 0 7px #4fc3dc44,
-  0 0 50px #4fc3dc,
-  0 0 100px #4fc3dc;
+  box-shadow: 0 0 0 10px #4fc3dc44, 0 0 50px #4fc3dc, 0 0 100px #4fc3dc;
   animation: animate 10s linear infinite;
   animation-duration: calc(125s / var(--i));
 }
 
-.bubbles span:nth-child(even)
-{
+.bubbles span:nth-child(even) {
   background: #ff2d75;
-  box-shadow: 0 0 0 7px #ff2d7544,
-  0 0 50px #ff2d75,
-  0 0 100px #ff2d75;
+  box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #ff2d75, 0 0 100px #ff2d75;
 }
-@keyframes animate
-{
-  0%
-  {
-     transform: translateY(100vh) scale(0);
+
+@keyframes animate {
+  0% {
+      transform: translateY(100vh) scale(0);
   }
-  100%
-  {
-     transform: translateY(-10vh) scale(1);
+  100% {
+      transform: translateY(-10vh) scale(1);
   }
 }
