--- a/styles.css
+++ b/styles.css
@@ -1,85 +1,82 @@
-/* Font Faces */
 @font-face {
-  font-family: "Chainwhacks";
-  src: url(Chainwhacks-vm72E.ttf) format("opentype");
-}
+    font-family: "Chainwhacks";
+    src: url(Chainwhacks-vm72E.ttf) format("opentype");
+ }
+ 
+ @font-face {
+    font-family: "Chainwhacks";
+    src: url(Chainwhacks-vm72E.ttf) format("opentype");
+    font-weight: bold;
+ }
 
-@font-face {
-  font-family: "Chainwhacks";
-  src: url(Chainwhacks-vm72E.ttf) format("opentype");
-  font-weight: bold;
-}
+ * {
+    font-family: "Chainwhacks", Verdana, Tahoma;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
-/* Reset and Default Styles */
-* {
-  font-family: "Chainwhacks", Verdana, Tahoma;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* Body Styles */
 body {
-  font-family: "Chainwhacks", Verdana, Tahoma;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  margin: auto;
-  color: white;
-  font-size: 0.7em;
-  justify-content: center;
-  background: #00001b;
-  position: fixed;
-  left: 0;
-  right: 0;
-  overflow: hidden;
-  scale: 2;
-  min-height: 950px;
-  min-width: 520px;
+    font-family: "Chainwhacks", Verdana, Tahoma;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    margin: auto;
+    color: white;
+    font-size: 0.7em;
+    justify-content: center;
+    min-height: 100vh;
+    background: #00001b;
+    position: fixed;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    scale: 2;
+    margin-top: -100px;
 }
 
-/* Game Styles */
 .winning-cell {
   background-color: #64d5ee;
   font-weight: bold;
   color: black;
 }
 
+
 h1 {
-  margin-bottom: 10px;
-  color: white;
+    margin-bottom: 10px;
+    color: white;
 }
 
 table {
-  border-collapse: collapse;
-  margin-bottom: 20px;
+    border-collapse: collapse;
+    margin-bottom: 20px;
 }
 
 td {
-  width: 40px;
-  height: 40px;
-  border: 1px solid #ddd;
-  text-align: center;
-  font-size: 18px;
-  cursor: pointer;
-  color: white;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ddd;
+    text-align: center;
+    font-size: 18px;
+    cursor: pointer;
+    color: white;
 }
 
 td:hover {
-  background-color: #f2f2f27c;
+    background-color: #f2f2f27c;
 }
 
 #scores {
-  text-align: center;
-  color: white;
+    text-align: center;
+    color: white;
 }
 
 #turnLabel {
-  font-size: 20px;
-  margin-bottom: 10px;
-  padding: 5px;
-  color: white;
+    font-size: 20px;
+    margin-bottom: 10px;
+    padding: 5px;
+    color: white;
 }
 
 button {
@@ -87,44 +84,83 @@ button {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  box-shadow: 0 0 5px #4fc3dc,
+  0 0 25px #4fc3dc;
+  background-color: #4fc3dc;
+  border: none;
+  color: white;
+  border-radius: 5%;
+}
+button:hover {
+background-color: #ff2d75;
+box-shadow: 0 0 5px #ff2d75,
+0 0 25px #ff2d75, 0 0 50px #ff2d75,
+0 0 100px #ff2d75, 0 0 200px #ff2d75;
 }
 
-/* Animation Styles */
-.container {
+.container
+{
   position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  min-width: 100%;
 }
-
-.bubbles {
+.bubbles
+{
   position: relative;
   display: flex;
 }
-
-.bubbles span {
+.bubbles span
+{
   position: relative;
   width: 30px;
   height: 30px;
   background: #4fc3dc;
   margin: 0 4px;
   border-radius: 50%;
-  box-shadow: 0 0 0 10px #4fc3dc44, 0 0 50px #4fc3dc, 0 0 100px #4fc3dc;
+  box-shadow: 0 0 0 10px #4fc3dc44,
+  0 0 50px #4fc3dc,
+  0 0 100px #4fc3dc;
   animation: animate 10s linear infinite;
   animation-duration: calc(125s / var(--i));
 }
 
-.bubbles span:nth-child(even) {
+.bubbles span:nth-child(even)
+{
   background: #ff2d75;
-  box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #ff2d75, 0 0 100px #ff2d75;
+  box-shadow: 0 0 0 10px #ff2d7544,
+  0 0 50px #ff2d75,
+  0 0 100px #ff2d75;
+}
+@keyframes animate
+{
+  0%
+  {
+     transform: translateY(100vh) scale(0);
+  }
+  100%
+  {
+     transform: translateY(-10vh) scale(1);
+  }
 }
 
-@keyframes animate {
-  0% {
-      transform: translateY(100vh) scale(0);
-  }
-  100% {
-      transform: translateY(-10vh) scale(1);
-  }
+/* Add this CSS to your existing styles or create a new file */
+.popup {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #8c8989c6;
+  padding: 20px;
+  z-index: 1;
+}
+
+.popup-content {
+  text-align: center;
+  color: white;
+}
+
+button {
+  cursor: pointer;
 }
